feat(player): allow multiple prizes per player and return list of assigned lots in DTO