@@ -1,9 +1,7 @@
 package com.frequencies.tombola.service.impl;
 
-import com.frequencies.tombola.dto.helloasso.HelloAssoFormDto;
-import com.frequencies.tombola.dto.helloasso.HelloAssoFormsResponse;
-import com.frequencies.tombola.dto.helloasso.HelloAssoOrdersResponse;
-import com.frequencies.tombola.dto.helloasso.HelloAssoParticipantDto;
+import com.frequencies.tombola.config.HelloAssoProperties;
+import com.frequencies.tombola.dto.helloasso.*;
 import com.frequencies.tombola.service.HelloAssoService;
 import com.frequencies.tombola.service.auth.HelloAssoAuthService;
 import lombok.RequiredArgsConstructor;
@@ -11,78 +9,85 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.*;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
+import org.springframework.web.util.UriComponentsBuilder;
 
+import java.time.Instant;
 import java.time.OffsetDateTime;
-import java.util.Collections;
+import java.time.temporal.ChronoUnit;
 import java.util.List;
 import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class HelloAssoServiceImpl implements HelloAssoService {
+    private final RestTemplate rest;
+    private final HelloAssoAuthService auth;
+    private final HelloAssoProperties cfg;
 
-    private final HelloAssoAuthService authService;
-    private final RestTemplate restTemplate;
-
-    @Value("${helloasso.api-url}")
-    private String helloAssoBaseUrl;
-
-    @Value("${helloasso.organization-slug}")
-    private String orgSlug;
-
-    @Override
-    public List<HelloAssoParticipantDto> getPaidParticipants(String formType, String formSlug) {
-        // par exemple, sur les 30 derniers jours
-        OffsetDateTime to   = OffsetDateTime.now();
-        OffsetDateTime from = to.minusDays(30);
-
-        try {
-            HelloAssoOrdersResponse resp = getPayments(
-                    formType, formSlug,
-                    from, to,
-                    null,     // pas de searchKey
-                    1, 100,   // première page, 100 items max
-                    null,     // pas de token
-                    List.of("Authorized", "Registered"),  // états à inclure
-                    "Desc", "Date",
-                    false     // on n’a pas besoin de la pagination complète
-            );
-
-            return resp.getData().stream()
-                    .filter(w -> "Authorized".equalsIgnoreCase(w.getState())
-                            || "Registered".equalsIgnoreCase(w.getState()))
-                    .map(w -> {
-                        var p = w.getPayer();
-                        return HelloAssoParticipantDto.builder()
-                                .firstName(p.getFirstName())
-                                .lastName( p.getLastName())
-                                .email(     p.getEmail())
-                                .phone(null)
-                                .state(     w.getState())
-                                .build();
-                    })
-                    .toList();
-
-        } catch (org.springframework.web.client.HttpClientErrorException.NotFound ex) {
-            // HelloAsso Sandbox ne connaît pas ce form → on renvoie juste une liste vide
-            return Collections.emptyList();
-        }
+    private HttpHeaders authHeaders() {
+        String token = auth.getAccessToken();
+        HttpHeaders h = new HttpHeaders();
+        h.setBearerAuth(token);
+        h.setAccept(List.of(MediaType.APPLICATION_JSON));
+        return h;
     }
 
     @Override
-    public List<HelloAssoFormDto> getAvailableForms() {
-        String url = String.format("%s/v5/organizations/%s/forms",
-                helloAssoBaseUrl, orgSlug);
+    public HelloAssoFormsResponse getAvailableForms() {
+        String url = UriComponentsBuilder
+                .fromUriString(cfg.getApiUrl())
+                .path("/v5/organizations/{org}/forms")
+                .buildAndExpand(cfg.getOrganizationSlug())
+                .toUriString();
 
-        HttpEntity<Void> request = new HttpEntity<>(buildHeaders());
-        ResponseEntity<HelloAssoFormsResponse> resp = restTemplate.exchange(
-                url, HttpMethod.GET, request, HelloAssoFormsResponse.class
+        ResponseEntity<HelloAssoFormsResponse> resp = rest.exchange(
+                url,
+                HttpMethod.GET,
+                new HttpEntity<>(authHeaders()),
+                HelloAssoFormsResponse.class
         );
 
-        if (!resp.getStatusCode().is2xxSuccessful() || resp.getBody() == null) {
-            return List.of();
-        }
-        return resp.getBody().getData();
+        return resp.getBody();
+    }
+
+    @Override
+    public List<HelloAssoParticipantDto> getPaidParticipants(String formType, String formSlug) {
+        // 1) get your token + build headers
+        HttpHeaders headers = authHeaders();
+
+        // 2) build the URL with from/to wide window
+        Instant now = Instant.now();
+        String from = now.minus(30, ChronoUnit.DAYS).toString();
+        String to   = now.plus(1, ChronoUnit.DAYS).toString();
+
+        String url = UriComponentsBuilder
+                .fromUriString(cfg.getApiUrl())
+                .path("/v5/organizations/{org}/forms/{type}/{slug}/payments")
+                .queryParam("from", from)
+                .queryParam("to", to)
+                .buildAndExpand(cfg.getOrganizationSlug(), formType, formSlug)
+                .toUriString();
+
+        ResponseEntity<HelloAssoOrdersResponse> resp = rest.exchange(
+                url,
+                HttpMethod.GET,
+                new HttpEntity<>(headers),
+                HelloAssoOrdersResponse.class
+        );
+
+        return resp.getBody().getData().stream()
+                .map(o -> {
+                    HelloAssoPayer p = o.getPayer();
+                    return HelloAssoParticipantDto.builder()
+                            .firstName(p.getFirstName())
+                            .lastName( p.getLastName())
+                            .email(    p.getEmail())
+                            .phone(    p.getPhone())
+                            .state(    o.getState())
+                            .build();
+                })
+                .collect(Collectors.toList());
+
     }
 
     @Override
@@ -100,42 +105,35 @@ public class HelloAssoServiceImpl implements HelloAssoService {
             String sortField,
             boolean withCount
     ) {
-        String url = String.format(
-                "%s/v5/organizations/%s/%s/%s/payments" +
-                        "?from=%s&to=%s&userSearchKey=%s" +
-                        "&pageIndex=%d&pageSize=%d&continuationToken=%s" +
-                        "&states=%s&sortOrder=%s&sortField=%s&withCount=%s",
-                helloAssoBaseUrl,
-                orgSlug,
-                formType,
-                formSlug,
-                from, to,
-                userSearchKey,
-                pageIndex,
-                pageSize,
-                continuationToken,
-                String.join(",", states),
-                sortOrder,
-                sortField,
-                withCount
-        );
-
-        HttpEntity<Void> request = new HttpEntity<>(buildHeaders());
-        ResponseEntity<HelloAssoOrdersResponse> resp = restTemplate.exchange(
-                url, HttpMethod.GET, request, HelloAssoOrdersResponse.class
-        );
-
-        if (!resp.getStatusCode().is2xxSuccessful() || resp.getBody() == null) {
-            throw new RuntimeException("Failed to fetch HelloAsso payments: " + resp.getStatusCode());
+        HttpHeaders headers = authHeaders();
+        var uriBuilder = UriComponentsBuilder
+                .fromUriString(cfg.getApiUrl())
+                .path("/v5/organizations/{org}/forms/{type}/{slug}/payments")
+                .queryParam("from", from.toString())
+                .queryParam("to",   to.toString())
+                .queryParam("userSearchKey", userSearchKey)
+                .queryParam("pageIndex", pageIndex)
+                .queryParam("pageSize",  pageSize)
+                .queryParam("continuationToken", continuationToken)
+                .queryParam("sortOrder", sortOrder)
+                .queryParam("sortField", sortField)
+                .queryParam("withCount", withCount);
+        // only add states if non-null
+        if (states != null && !states.isEmpty()) {
+            uriBuilder.queryParam("states", String.join(",", states));
         }
+
+        String url = uriBuilder
+                .buildAndExpand(cfg.getOrganizationSlug(), formType, formSlug)
+                .toUriString();
+
+        ResponseEntity<HelloAssoOrdersResponse> resp = rest.exchange(
+                url,
+                HttpMethod.GET,
+                new HttpEntity<>(headers),
+                HelloAssoOrdersResponse.class
+        );
         return resp.getBody();
     }
 
-    // Helper to inject the Bearer token header
-    private HttpHeaders buildHeaders() {
-        HttpHeaders headers = new HttpHeaders();
-        headers.setBearerAuth(authService.getAccessToken());
-        headers.setAccept(List.of(MediaType.APPLICATION_JSON));
-        return headers;
-    }
 }
